# Keyo

./: Detector.py  README.md  keylogger.py  main.py  pyproject.toml
.obsidian/: workspace.json
css/: dashboard.css  login.css
html/: dashboard.html  login.html
js/: dashboard.js  login.js
lib/: KeyLog.py  __init__.py
